--- a/style.css
+++ b/style.css
@@ -8,14 +8,8 @@
 
 .row {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1280px;
     margin: 0 auto;
-}
-
-img {
-    width: 100%;
-    height: 100%;
-    max-height: 50vh;
 }
 
 a {
@@ -26,13 +20,48 @@ li {
     list-style: none;
 }
 
+h1 {
+    font-size: 3rem;
+}
+
+.purple {
+    color: rgba(100,21,255);
+}
+
+input {
+    padding-right: 12rem;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+}
+
+button {
+    position: absolute;
+    text-align: center;
+    max-width: 28rem;
+    font-size: 100%;
+    width: 10rem;
+    padding: 1rem 0;
+    border-radius: 9999px;
+    margin: 8px 8px 8px 0;
+    background-color: #6415FF;
+    font-weight: 700;
+    color: rgba(247,250,252);
+    border: none;
+}
+
+body {
+    padding: 32px;
+}
+
 /* NAV */
 
 .nav__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 32px;
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .logo {
@@ -49,6 +78,8 @@ li {
     font-weight: 900;
     color: #243E63;
     letter-spacing: 0.025em;
+    border-bottom-width: 0px;
+    line-height: 1px;
 }
 
 .nav__links {
@@ -62,6 +93,11 @@ li {
     font-size: 0.875rem;
     font-weight: 600;
     letter-spacing: 0.025em;
+    color: #243E63;
+}
+
+.login--link {
+    margin: 0 24px 0 48px;
 }
 
 .sign_up--link {
@@ -72,6 +108,67 @@ li {
     border-radius: 9999px;
 }
 
-.login--link {
-    margin: 0 24px 0 48px;
+/* HEADER */
+
+.header__container {
+    display: flex;
+    align-items: center;
+    padding: 6rem 0;
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header__description {
+    width: 40%;
+    text-align: left;
+    max-width: none;
+}
+
+.header__para {
+    font-size: 1.125rem;
+    margin: 2rem 0;
+    line-height: 24px;
+    color: #243E63;
+}
+
+.input__button {
+   position: relative;
+   display: flex;
+   align-items: center;
+   justify-content: flex-end;
+}
+
+input {
+   width: 100%;
+   height: auto;
+   border-radius: 9999px;
+   border-width: 2px;
+   padding-left: 2rem;
+   font-weight: 500;
+   font-size: 100%;
+   border-color: #a0aec09f;
+}
+
+.trusted__costumers {
+    margin: 80px 0 0;
+}
+
+.costumers__img {
+    padding-right: 8rem;
+    margin-top: 1rem;
+    width: 100%;
+    opacity: 0.5;
+}
+
+.costumers__para {
+    font-size: 0.75rem;
+    font-weight: 700;
+    color: #A0AEC0;
+}
+
+img {
+    max-width: 48rem;
+    width: 100%;
+    height: auto;
 }
