--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
     margin: 0 auto;
 }
 
+.container {
+    padding: 96px 0;
+    max-width: 1024px;
+    margin: 0 auto;
+}
+
 a {
     text-decoration: none;
 }
@@ -73,10 +79,6 @@ p {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-}
-
-#landing {
-    height: 100vh;
 }
 
 /* NAV */
@@ -143,7 +145,6 @@ p {
     max-width: 1280px;
     margin-left: auto;
     margin-right: auto;
-    height: calc(100vh - 43.98);
 }
 
 .header__description {
@@ -214,4 +215,76 @@ input {
 .header__img {
     max-width: 746.48px;
     height: auto;
+}
+
+/* FEATURES */
+
+.features__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.features__subheading {
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+    margin-bottom: 1rem;
+}
+
+.features__heading {
+    width: 100%;
+    font-size: 3rem;
+    font-weight: 900;
+    letter-spacing: 0.025em;
+    text-align: center;
+    color: rgba(36,62,99);
+    height: 72.0117px;
+}
+
+.features__description {
+    font-size: 1.125rem;
+    font-weight: 500;
+    line-height: 1.625;
+    max-width: 36rem;
+    width: 100%;
+    margin: 0;
+    margin-top: 16px;
+    text-align: center;
+    color: rgba(124,139,161);
+}
+
+.vertical__spacer {
+    margin-top: 2.5rem;
+    width: 100%;
+}
+
+.feature__info {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.feature__section {
+    text-align: left;
+    padding: 2rem 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    display: flex;
+    width: calc(100% / 3);
+}
+
+.feature__img--wrapper .feature__img {
+    border-width: 1px;
+    text-align: center;
+    padding: 1.125rem;
+    flex-shrink: 0;
+    border-radius: 9999px;
+}
+
+.feature__img {
+    width: 1.5rem;
+    height: 1.5rem;
+    width: 100%;
+    border: #A0AEC0;
 }
